<resources>
    <string name="app_name">FootBallClubApp</string>
    <string-array name="club_name">
        <item>Barcelona FC</item>
        <item>Real Madrid FC</item>
        <item>Bayern Munchen FC</item>
        <item>Manchester City FC</item>
        <item>Manchester United FC</item>
        <item>Chelsea FC</item>
        <item>AC Milan FC</item>
        <item>Arsenal FC</item>
    </string-array>

    <array name="club_image">
        <item>@drawable/img_barca</item>
        <item>@drawable/img_madrid</item>
        <item>@drawable/img_bayern</item>
        <item>@drawable/img_city</item>
        <item>@drawable/img_mu</item>
        <item>@drawable/img_chelsea</item>
        <item>@drawable/img_acm</item>
        <item>@drawable/img_arsenal</item>
    </array>

    <array name="club_desc">
        <item>Futbol Club Barcelona, known simply as Barcelona and colloquially as Barça, is a
            professional football club based in Barcelona, Catalonia, Spain
        </item>
        <item>Real Madrid Club de Fútbol, commonly known as Real Madrid, is a professional football
            club based in Madrid, Spain. Founded on 6 March 1902 as the Madrid Football Club, the
            club has traditionally worn a white home kit since inception.
        </item>
        <item>Fußball-Club Bayern München e.V., commonly known as FC Bayern München, FCB, Bayern
            Munich, or FC Bayern, is a German sports club based in Munich, Bavaria.
        </item>
        <item>Manchester City Football Club, also known simply as City or the Cityzens, is a
            football club based in east Manchester, England. Founded in 1880 as St. Mark's, it
            became Ardwick Association Football Club in 1887 and Manchester City in 1894
        </item>
        <item>Manchester United Football Club, commonly known as Man. United or simply United, is a
            professional football club based in Old Trafford, Greater Manchester, England, that
            competes in the Premier League, the top flight of English football.
        </item>
        <item>Chelsea Football Club is a professional football club in London, England, that
            competes in the Premier League. Founded in 1905, the club's home ground since then has
            been Stamford Bridge. Chelsea won the First Division title in 1955, followed by various
            cup competitions between 1965 and 1971.
        </item>
        <item>Associazione Calcio Milan, commonly referred to as A.C. Milan or simply Milan, is a
            professional football club in Milan, Italy, founded in 1899. The club has spent its
            entire history, with the exception of the 1980–81 and 1982–83 seasons, in the top flight
            of Italian football, known as Serie A since 1929–30.
        </item>
        <item>Arsenal Football Club is a professional football club based in Islington, London,
            England, that plays in the Premier League, the top flight of English football.
        </item>
    </array>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <array name="leagueId">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Prev Match Fragment</string>
    <string name="next_match">Next Match</string>
    <string name="prev_match">Prev Match</string>
    <string name="favorites">favorite</string>
    <string name="league_name">League</string>
    <string name="date_event">2018-09-26</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="vs">VS</string>
    <string name="team">Team</string>
    <string name="shots">Shots</string>
    <string name="goal_details">Goal Details</string>
    <string name="red_card">Red Card</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="fav_match">Fav Match</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="team_name">Liverpool</string>
    <string name="team_formed_year">1983</string>
    <string name="team_stadium">Emirates Stadium</string>
    <string name="match">Match</string>
    <string name="teams">Teams</string>
</resources>
