<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RL"
    tools:context=".activity.DetailMatchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="8dp"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/league_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/league_name"
                android:layout_margin="16dp"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/date_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="" />
            <TextView
                android:id="@+id/time_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/home_badge"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@id/home_score"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@id/vs"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="0" />

                <TextView
                    android:id="@+id/vs"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/vs" />
                <TextView
                    android:id="@+id/away_score"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@id/vs"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="0" />

                <ImageView
                    android:id="@+id/away_badge"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@id/away_score"
                    android:gravity="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="8dp"
                    android:text=""
                    android:layout_toLeftOf="@id/team"/>

                <TextView
                    android:id="@+id/team"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/team"
                    android:gravity="center"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="8dp"
                    android:text=""
                    android:layout_toRightOf="@id/team"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9d9d9">

                <TextView
                    android:id="@+id/home_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/shots"
                    android:gravity="left"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/shots"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/shots"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/shots"
                    android:gravity="right"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_goal_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/goal"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/goal"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/goal_details"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_goal_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/goal"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9d9d9">

                <TextView
                    android:id="@+id/home_yellow_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/yellow_card"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/yellow_card"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/yellow_card" />

                <TextView
                    android:id="@+id/away_yellow_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/yellow_card"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_red_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/red_card"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/red_card"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/red_card"
                    android:layout_alignParentTop="true"/>

                <TextView
                    android:id="@+id/away_red_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/red_card"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9d9d9">

                <TextView
                    android:id="@+id/home_goalkeeper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/goalkeeper"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/goalkeeper"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/goalkeeper"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_goalkeeper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/goalkeeper"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_defense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/defense"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/defense"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/defense"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_defense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/defense"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9d9d9">

                <TextView
                    android:id="@+id/home_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/midfield"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/midfield"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/midfield"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/midfield"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_forward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/forward"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/forward"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_forward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/forward"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9d9d9">

                <TextView
                    android:id="@+id/home_substitutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/substitutes"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/substitutes"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/substitutes"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/away_substitutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/substitutes"
                    android:gravity="end"
                    android:paddingRight="8dp"
                    android:text="" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


</RelativeLayout>